src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ACT_ID__c</fullName>
        <externalId>true</externalId>
        <label>ACT ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Alumni_Info__c</fullName>
        <formula>IF( ISBLANK( Alumni__c),&quot;No alumni information&quot; , 
HYPERLINK(&quot;/&quot; &amp;  Alumni__c, &quot;Click to view details...&quot; , &quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alumni Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alumni__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alumni</label>
        <referenceTo>Alumni__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <description>Audit trail of the type of applicant when admitted and enrolled; associated with Ethos Admission Application Type</description>
        <label>Applicant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Applicant_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorized_Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For people authorized by student under FERPA</description>
        <inlineHelpText>Lookup to contact record of authorized person under FERPA</inlineHelpText>
        <label>Authorized Contact 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use when student authorizes access under FERPA</description>
        <inlineHelpText>Person authorized access under FERPA</inlineHelpText>
        <label>Authorized Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Authorized Contact 2)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Gift__c</fullName>
        <label>Average Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Best_Gift_Year_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Best Gift Year Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Best_Gift_Year__c</fullName>
        <label>Best Gift Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship_Detail__c</fullName>
        <label>Citizenship Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Citizen</fullName>
                </value>
                <value>
                    <fullName>Non-Resident Citizen</fullName>
                </value>
                <value>
                    <fullName>Resident Alien</fullName>
                </value>
                <value>
                    <fullName>Asylee</fullName>
                </value>
                <value>
                    <fullName>Minister&apos;s Permit</fullName>
                </value>
                <value>
                    <fullName>Non-Citizen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Citizenship_Type__c</fullName>
        <description>From EASY Application</description>
        <label>Citizenship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Citizenship_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_Standing__c</fullName>
        <description>Field displayed from Program Enrollment object</description>
        <formula>TEXT(Program_Enrollment__r.hed__Class_Standing__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field displayed from Program Enrollment object</inlineHelpText>
        <label>Class Standing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Year_Official__c</fullName>
        <description>Graduation year or year alumnus associates with as class year</description>
        <inlineHelpText>Graduation year or year alumnus associates with as class year</inlineHelpText>
        <label>Class Year-Official</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <description>To track for graduation rate metrics</description>
        <inlineHelpText>To track for graduation rate metrics</inlineHelpText>
        <label>First-Time Full-Time Cohort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fall 2010</fullName>
                </value>
                <value>
                    <fullName>Fall 2011</fullName>
                </value>
                <value>
                    <fullName>Fall 2012</fullName>
                </value>
                <value>
                    <fullName>Fall 2013</fullName>
                </value>
                <value>
                    <fullName>Fall 2014</fullName>
                </value>
                <value>
                    <fullName>Fall 2015</fullName>
                </value>
                <value>
                    <fullName>Fall 2016</fullName>
                </value>
                <value>
                    <fullName>Fall 2017</fullName>
                </value>
                <value>
                    <fullName>Fall 2018</fullName>
                </value>
                <value>
                    <fullName>Fall 2019</fullName>
                </value>
                <value>
                    <fullName>Fall 2020</fullName>
                </value>
                <value>
                    <fullName>Fall 2021</fullName>
                </value>
                <value>
                    <fullName>Fall 2022</fullName>
                </value>
                <value>
                    <fullName>Fall 2023</fullName>
                </value>
                <value>
                    <fullName>Fall 2024</fullName>
                </value>
                <value>
                    <fullName>Fall 2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Constituent_ID__c</fullName>
        <description>A unique external ID field to house a prospect or student&apos;s ID for integration or manual data loading processes. It is also the identification code to be used for Contact Matching Rules as part of the Interaction process.</description>
        <inlineHelpText>ERP ID</inlineHelpText>
        <label>Constituent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Represents the primary type associated with the Contact</description>
        <inlineHelpText>From College&apos;s Source field on NAE</inlineHelpText>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alumnus</fullName>
                </value>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Donor</fullName>
                </value>
                <value>
                    <fullName>Emergency Contact</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Event Guest</fullName>
                </value>
                <value>
                    <fullName>Faculty</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The Power of One</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counselor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to Counselor User record</description>
        <inlineHelpText>Link to Counselor User record</inlineHelpText>
        <label>Assigned Admissions Counselor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CounselorContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Immigration_Visa_Status__c</fullName>
        <label>Current Immigration/Visa Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exchange Visitor (J-1)</fullName>
                </value>
                <value>
                    <fullName>Exchange Visitor Dependent (J-2)</fullName>
                </value>
                <value>
                    <fullName>Fiance (K)</fullName>
                </value>
                <value>
                    <fullName>Foreign Business (L)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Permanent Resident (Green Card)</fullName>
                </value>
                <value>
                    <fullName>Religious Work (R)</fullName>
                </value>
                <value>
                    <fullName>Student (F-1)</fullName>
                </value>
                <value>
                    <fullName>Student Dependent (F-2)</fullName>
                </value>
                <value>
                    <fullName>Visitor (B)</fullName>
                </value>
                <value>
                    <fullName>Work (H)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deceased_Date__c</fullName>
        <description>Date associated with Deceased Checkbox</description>
        <label>Deceased Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_Level__c</fullName>
        <description>Level of the student</description>
        <label>Degree Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Non-Degree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Denomination__c</fullName>
        <description>List of Denominations associated with Religion</description>
        <label>Denomination</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>hed__Religion__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A.M.E.</fullName>
                </value>
                <value>
                    <fullName>Apostolic</fullName>
                </value>
                <value>
                    <fullName>Assembly of God</fullName>
                </value>
                <value>
                    <fullName>Baptist</fullName>
                </value>
                <value>
                    <fullName>Bible</fullName>
                </value>
                <value>
                    <fullName>Brethren in Christ</fullName>
                </value>
                <value>
                    <fullName>C.C.C.U.</fullName>
                </value>
                <value>
                    <fullName>Catholic</fullName>
                </value>
                <value>
                    <fullName>Chicago Central Naz</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Church of Christ</fullName>
                </value>
                <value>
                    <fullName>Church of God</fullName>
                </value>
                <value>
                    <fullName>Congregational</fullName>
                </value>
                <value>
                    <fullName>Covenant</fullName>
                </value>
                <value>
                    <fullName>E. Michigan Nazarene</fullName>
                </value>
                <value>
                    <fullName>Episcopal</fullName>
                </value>
                <value>
                    <fullName>Evang. Mennonite</fullName>
                </value>
                <value>
                    <fullName>Evang. Unit. Brethrn</fullName>
                </value>
                <value>
                    <fullName>Evangelical</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Free Methodist</fullName>
                </value>
                <value>
                    <fullName>Friends</fullName>
                </value>
                <value>
                    <fullName>Greek Orthodox</fullName>
                </value>
                <value>
                    <fullName>Hindu</fullName>
                </value>
                <value>
                    <fullName>Holiness</fullName>
                </value>
                <value>
                    <fullName>Illinois Dist. Naz</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Indianapolis Nazaren</fullName>
                </value>
                <value>
                    <fullName>Jewish Lutheran</fullName>
                </value>
                <value>
                    <fullName>Mennonite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donor_Id__c</fullName>
        <formula>CASESAFEID(Donor__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donor Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donor_Info__c</fullName>
        <formula>IF( ISBLANK( Donor__c),&quot;No donor information&quot; , 
HYPERLINK(&quot;/&quot; &amp;  Donor__c, &quot;Click to view details...&quot; , &quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donor Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donor</label>
        <referenceTo>Donor__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_Ethnicity__c</fullName>
        <description>To be used for integration</description>
        <inlineHelpText>From SIS integration</inlineHelpText>
        <label>ERP Ethnicity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Info__c</fullName>
        <description>Link to Contact&apos;s Employee Record</description>
        <formula>IF( ISBLANK( Employee__c),&quot;No employee information&quot; , 
HYPERLINK(&quot;/&quot; &amp;  Employee__c, &quot;Click to view details...&quot; , &quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to Contact&apos;s Employee Record</inlineHelpText>
        <label>Employee Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Employee object</description>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>English_Primary_Language__c</fullName>
        <label>English Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_GUID__c</fullName>
        <description>Auto generated id on contact</description>
        <externalId>true</externalId>
        <label>External GUID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FERPA_Details__c</fullName>
        <description>Documents FERPA Preferences</description>
        <label>FERPA Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Directory Information</fullName>
                </value>
                <value>
                    <fullName>Academic Information</fullName>
                </value>
                <value>
                    <fullName>Grade Information</fullName>
                </value>
                <value>
                    <fullName>Billing Information</fullName>
                </value>
                <value>
                    <fullName>Payment Information</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender_Identity__c</fullName>
        <label>Gender Identity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Intended_Immigration_Visa_Status__c</fullName>
        <label>Intended Immigration/Visa Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exchange Visitor (J-1)</fullName>
                </value>
                <value>
                    <fullName>Exchange Visitor Dependent (J-2)</fullName>
                </value>
                <value>
                    <fullName>Fiance (K)</fullName>
                </value>
                <value>
                    <fullName>Foreign Business (L)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Permanent Resident (Green Card)</fullName>
                </value>
                <value>
                    <fullName>Religious Work (R)</fullName>
                </value>
                <value>
                    <fullName>Student (F-1)</fullName>
                </value>
                <value>
                    <fullName>Student Dependent (F-2)</fullName>
                </value>
                <value>
                    <fullName>Visitor (B)</fullName>
                </value>
                <value>
                    <fullName>Work (H)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lifetime_Hard_Credit_Amount__c</fullName>
        <label>Lifetime Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lifetime_Soft_Credit_Amount__c</fullName>
        <label>Lifetime Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lifetime_Soft_Credit_Count__c</fullName>
        <label>Lifetime Soft Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <description>From EASY Application</description>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marital_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>From EASY Application</description>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Source__c</fullName>
        <label>Migration Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Recruit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To differentiate newly added contacts from already existing contacts</description>
        <label>Needs Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIN__c</fullName>
        <label>PIN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Record_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Must be checked before sent to ERP</description>
        <inlineHelpText>Must be checked before sent to ERP</inlineHelpText>
        <label>Person Record Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Pronoun__c</fullName>
        <label>Personal Pronoun</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_First_Name__c</fullName>
        <label>Preferred First Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Surname__c</fullName>
        <description>For Maiden Name</description>
        <label>Previous Surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Academic Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Academic_Program_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Department Members</relationshipLabel>
        <relationshipName>Department_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Educational_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Educational Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Institution Members</relationshipLabel>
        <relationshipName>Institution_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Sports_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Sports Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Organization Members</relationshipLabel>
        <relationshipName>Sport_Organization_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Student_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Student Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Primary Student Organization)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_FY_Soft_Credit_Count__c</fullName>
        <label>Prior FY Soft Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Fiscal_Year_Hard_Credit_Amount__c</fullName>
        <label>Prior Fiscal Year Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Fiscal_Year_Hard_Credit_Count__c</fullName>
        <label>Prior Fiscal Year Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Fiscal_Year_Soft_Credit_Amount__c</fullName>
        <label>Prior Fiscal Year Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Privacy_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Privacy Status</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ethos__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Privacy Statuses</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ethos__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Program Enrollment for the PRIMARY program</description>
        <inlineHelpText>PRIMARY program enrollment</inlineHelpText>
        <label>Primary Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pronunciation_URL__c</fullName>
        <description>Link to recording</description>
        <inlineHelpText>Link to recording</inlineHelpText>
        <label>Pronunciation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Pronunciation__c</fullName>
        <description>Phoenetic text</description>
        <inlineHelpText>Phoenetic text</inlineHelpText>
        <label>Pronunciation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation_Waiver__c</fullName>
        <description>Documents applicant/student&apos;s waiver of right to review recommendations</description>
        <inlineHelpText>Waiver of right to review recommendations</inlineHelpText>
        <label>Recommendation Waiver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruit_Contact_Method_Text_Permission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow = true
Do Not Allow = false</description>
        <label>Is it okay for ONU to text you?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruit_Do_Not_Contact_Reason__c</fullName>
        <label>Recruit Do Not Contact Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No longer interested in the Institution</fullName>
                </value>
                <value>
                    <fullName>Person Requested</fullName>
                </value>
                <value>
                    <fullName>Duplicate Record</fullName>
                </value>
                <value>
                    <fullName>Invalid contact information</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Inaccurate and/or False Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruit_Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow = false
Do Not Allow = true</description>
        <label>Recruit Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruit_Do_not_allow_Bulk_E_mails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow = false
Do Not Allow = true</description>
        <label>Recruit Do not allow Bulk E-mails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruit_Do_not_allow_E_mails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow = false
Do Not Allow = true</description>
        <label>Recruit Do not allow E-mails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruit_Do_not_allow_Mails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recruit Do not allow Mails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruit_Do_not_allow_Phone_Calls__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow = false
Do Not Allow = true</description>
        <label>Recruit Do not allow Phone Calls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruit_GUID__c</fullName>
        <externalId>true</externalId>
        <label>Recruit GUID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Recruit_Inquiry_Date__c</fullName>
        <label>Recruit Inquiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recruit_Inquiry_Event__c</fullName>
        <label>Recruit Inquiry Event</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>